sqlapi-local.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "sqlapi" 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlapi
  template:
    metadata:
      labels:
        app: sqlapi 
    spec:
      containers:
        - name: "sqlapi"
          image: "fasthack10.azurecr.io/sqlapi:1.0"
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: "sqlapi"
    labels:
        app: "sqlapi"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "sqlapi"
